[gd_scene load_steps=21 format=3 uid="uid://df56b7s6avaf8"]

[ext_resource type="PackedScene" uid="uid://cl21kvpvqikjt" path="res://scenes/Spinner.tscn" id="1_00bh1"]
[ext_resource type="Script" uid="uid://dyiu38wi45so8" path="res://scripts/SlotMachineGUI.gd" id="1_v24rf"]
[ext_resource type="Texture2D" uid="uid://dhmf2r3rjud7d" path="res://art/slot_machine_hud.png" id="2_v24rf"]
[ext_resource type="Texture2D" uid="uid://bauacno634aay" path="res://art/crank_tileset.png" id="3_44m3l"]
[ext_resource type="Texture2D" uid="uid://ccp6dtd4og2iy" path="res://art/hand.png" id="4_7pjsk"]
[ext_resource type="Script" uid="uid://12cp2g5i4y8t" path="res://scripts/HandCursor.gd" id="5_k50qd"]
[ext_resource type="AudioStream" uid="uid://bsosco0dhkl5x" path="res://audio/tap.mp3" id="6_8q5i5"]
[ext_resource type="Texture2D" uid="uid://h54glqrkjgbo" path="res://art/stop_button_spritesheet.png" id="8_44m3l"]

[sub_resource type="Animation" id="Animation_bvhbk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlotMachine/Crank:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wuoie"]
resource_name = "crank"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlotMachine/Crank:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spinner1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spinner2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Spinner3")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start"
}]
}

[sub_resource type="Animation" id="Animation_44m3l"]
resource_name = "stop"
step = 0.25
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_spinners"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cpsxm"]
_data = {
&"RESET": SubResource("Animation_bvhbk"),
&"crank": SubResource("Animation_wuoie"),
&"stop": SubResource("Animation_44m3l")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wuoie"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bvhbk"]
size = Vector2(72, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpsxm"]
size = Vector2(72, 152)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hmewc"]
size = Vector2(138, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44m3l"]
size = Vector2(22, 12)

[sub_resource type="Animation" id="Animation_w2501"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_0mevm"]
resource_name = "tap"
length = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jsoai"]
_data = {
&"RESET": SubResource("Animation_w2501"),
&"tap": SubResource("Animation_0mevm")
}

[node name="SlotMachine" type="CanvasLayer"]
script = ExtResource("1_v24rf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cpsxm")
}

[node name="Spinner1" parent="." instance=ExtResource("1_00bh1")]
position = Vector2(117, 112)
normal_speed = 200.0

[node name="Spinner2" parent="." instance=ExtResource("1_00bh1")]
position = Vector2(141, 112)
normal_speed = 350.0

[node name="Spinner3" parent="." instance=ExtResource("1_00bh1")]
position = Vector2(165, 112)
normal_speed = 500.0

[node name="SlotMachine" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(160, 120)
texture = ExtResource("2_v24rf")

[node name="Crank" type="Sprite2D" parent="SlotMachine"]
texture_filter = 1
position = Vector2(120, 40)
texture = ExtResource("3_44m3l")
hframes = 3

[node name="GrabArea" type="Area2D" parent="SlotMachine"]
position = Vector2(120, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlotMachine/GrabArea"]
position = Vector2(-4, -4)
shape = SubResource("RectangleShape2D_wuoie")

[node name="PullArea" type="Area2D" parent="SlotMachine"]
position = Vector2(120, 80)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlotMachine/PullArea"]
position = Vector2(-4, 8)
shape = SubResource("RectangleShape2D_bvhbk")

[node name="CancelArea" type="Area2D" parent="SlotMachine"]
position = Vector2(120, 80)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlotMachine/CancelArea"]
position = Vector2(-4, -36)
shape = SubResource("RectangleShape2D_cpsxm")

[node name="TapArea" type="Area2D" parent="SlotMachine"]
position = Vector2(120, 80)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlotMachine/TapArea"]
position = Vector2(-128, -44)
shape = SubResource("RectangleShape2D_hmewc")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(149, 204)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_44m3l")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture_filter = 1
texture = ExtResource("8_44m3l")
hframes = 2
frame = 1

[node name="Hand" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("4_7pjsk")
offset = Vector2(6, 24)
hframes = 3
frame = 1
script = ExtResource("5_k50qd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hand"]
libraries = {
&"": SubResource("AnimationLibrary_jsoai")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Hand"]
stream = ExtResource("6_8q5i5")

[connection signal="mouse_entered" from="SlotMachine/GrabArea" to="Hand" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="SlotMachine/GrabArea" to="Hand" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="SlotMachine/PullArea" to="Hand" method="_on_pull_area_mouse_entered"]
[connection signal="mouse_exited" from="SlotMachine/CancelArea" to="Hand" method="_on_cancel_area_mouse_exited"]
[connection signal="mouse_entered" from="SlotMachine/TapArea" to="Hand" method="_on_tap_area_mouse_entered"]
[connection signal="mouse_exited" from="SlotMachine/TapArea" to="Hand" method="_on_tap_area_mouse_exited"]
[connection signal="mouse_entered" from="Area2D" to="Hand" method="_on_stopbutton_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Hand" method="_on_stopbutton_area_2d_mouse_exited"]
